--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "juntossomosmais-challenge",
   "version": "0.1.0",
+  "author": "Stephanie Fernandes <steph3001@gmail.com> (https://msfern.netlify.com)",
+  "bugs": {
+    "url": "https://github.com/msfern/juntossomosmais-challenge/issues"
+  },
+  "homepage": "https://github.com/msfern/juntossomosmais-challenge#readme",
+  "license": "MIT",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1"
   },
   "scripts": {
